infrastructure/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: worldvibe-service
spec:
  selector:
    app: worldvibe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
