infrastructure/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worldvibe-ingress
spec:
  rules:
    - host: "worldvibe.example.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: worldvibe-service
                port:
                  number: 80
